--- a/opt/kingsoft/wps-office/office6/dicts/spellcheck/tr_TR/dict.conf
+++ b/opt/kingsoft/wps-office/office6/dicts/spellcheck/tr_TR/dict.conf
@@ -1,5 +1,5 @@
-[Dictionary]
+﻿[Dictionary]
 DisplayName=Türkçe (Türkiye)
-DisplayName[zh_CN]=英语 (美国)
-DisplayName[en_US]=English (United States)
-DisplayName[en_US]=Türkçe (Türkiye)
+DisplayName[zh_CN]=土耳其语 (火鸡)
+DisplayName[en_US]=Turkish (Turkey)
+DisplayName[tr_TR]=Türkçe (Türkiye)
