--- a/opt/kingsoft/wps-office/office6/mui/tr_TR/config/localizedfunctionname.cfg
+++ b/opt/kingsoft/wps-office/office6/mui/tr_TR/config/localizedfunctionname.cfg
@@ -1,4 +1,4 @@
-[Function]
+﻿[Function]
 ;"aynı" ibaresi olan komutlar sonra silinecek, elimde tüm komutların listesi olsun diye ekledim.
 DATE=TARİH
 DATEVALUE=TARİHSAYISI
@@ -51,7 +51,7 @@ SINH=SİNH
 SKEW=ÇARPIKLIK
 SQRT=KAREKÖK
 SQRTPI=KAREKÖKPİ
-STEYX=STEYX  ;aynı
+STEYX=STHYX
 SUBTOTAL=ALTTOPLAM
 SUM=TOPLA
 SUMIF=ETOPLA
@@ -135,7 +135,6 @@ VAR=VAR  ;aynı
 VARA=VARA  ;aynı
 VARP=VARS
 VARPA=VARSA
-GAMMALN=GAMMALN
 FINV=FTERS
 FORECAST=TAHMİN
 BETADIST=BETADAĞ
@@ -220,7 +219,7 @@ PV=BD
 RATE=FAİZ_ORANI
 SLN=DA
 SYD=YAT
-VDB=VDB  ;aynı
+VDB=DAB  ;aynı
 FACTDOUBLE=ÇİFTFAKTÖR
 MROUND=KYUVARLA
 MULTINOMIAL=ÇOKTERİMLİ
@@ -283,18 +282,72 @@ AVERAGEIFS=ÇOKEĞERORTALAMA
 BAHTTEXT=BAHTMETİN
 BINOM.DIST.RANGE=BİNOM.DAĞ.ARALIK
 BINOM.INV=BİNOM.TERS
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+BINOM.DIST=BİNOM.DAĞ
+DATEDIF=ETARİHLİ
+DAY=GÜN
+DAYS360=GÜN360
+EDATE=SERİTARİH
+EOMONTH=SERİAY
+NETWORKDAYS.INTL=TAMİŞGÜNÜ.ULUSL
+COUPDAYBS=KUPONGÜNBD
+COUPDAYSNC=KUPONGÜNDSK
+CUMIMPT=TOPÖDENENFAİZ
+CUMPRINC=TOPANAPARA
+PRICE=DEĞER
+XNPV=ANBD
+MAXIFS=ÇOKEĞERMAK
+MINIFS=ÇOKEĞERMİN
+IFS=ÇOKEĞER
+IFNA=EĞERYOKSA
+TREND=EĞİLİM
+TRANSPOSE=DEVRİK_DÖNÜŞÜM
+TEXTJOIN=METNİBİRLEŞTİR
+CONCAT=ARALIKBİRLEŞTİR
+SWITCH=İLKEŞLEŞEN
+T=M
+SUMIFS=ÇOKETOPLA
+STDEV.S=STDSAPMA.S
+STDEV=STDSAPMA
+SEARCHB=ARAB
+RTD=GZV
+RANK.EQ=RANK.EŞİT
+RANK.AVG=RANK.ORT
+PHONETIC=SES
+NUMBERSTRING=SAYIDİZİ
+MMULT=DÇARP
+MINVERSE=DİZEY_TERS
+MDETERM=DETERMİNANT
+LOGEST=LOT
+INFO=BİLGİ
+IMSUB=SANTOPLA
+IFERROR=EĞERHATA
+HYPERLINK=KÖPRÜ
+GETPIVOTDATA=ÖZETVERİAL
+GAMMALN.PRECISE=GAMALN.DUYARLI
+FORMULATEXT=FORMÜLMETNİ
+FIXED=SAYIDÜZENLE
+EVALUATE=DEĞERBİÇ
+DVARP=VSEÇVARS
+DVAR=VSEÇVAR
+DSUM=VSEÇTOPLA
+DSTDEVP=VSEÇSTDSAPMAS
+DSTDEV=VSEÇSTDSAPMA
+DPRODUCT=VSEÇÇARP
+DMIN=VSEÇMİN
+DMAX=VSEÇMAK
+DGET=VAL
+DBCS=DBCS	;aynı
+DAVERAGE=VSEÇORT
+COUNTIFS=ÇOKEĞERSAY
+CLEAN=TEMİZ
+CHISQ.INV=KİKARE.TERS
+CHISQ.DIST=KİKARE.DAĞ
+CELL=HÜCRE
+BITXOR=BİTÖZELVEYA
+BITRSHIFT=BİTSAĞAKAYDIR
+BITLSHIFT=BİTSOLAKAYDIR
+BITOR=BİTVEYA
+BITAND=BİTVE
+CUMIPMT=TOPÖDENENFAİZ
+DCOUNT=VSEÇSAY
+DCOUNTA=VSEÇSAYDOLU
